# polymarket-auto

./: .gitignore  AGENTS.md  OPSEC.md  PLAN.md  README.md  next.config.ts  package.json  stealthtrace.py  stealthwatch.py  swarm_agent.py  test-agent.mjs  test-client.mjs
memecoin-automation-swarm/: .env.example  .gitignore  .solana-deployer-keypair.json  .tasks.md  AGENTS.md  CEO_PLAN.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE  README.md  TODO.md  analyze.sh  fix_await.js  fix_clickhouse.sql  fix_json.js  fix_orch.js  fix_orch2.js  fix_shared_ts.js  fix_solana_creator.js  fix_typecheck.js  fund_devnet.js  fund_testnet.js  generate_keypair.js  openapi.yaml  package.json  query_details.sh  run_devnet_pow.sh  setup_clickhouse.sql  sim_listener.ts  sim_runner.ts  sim_signals.ts  test_localhost.js  test_rpc.ts  tsconfig.json  update_shared.js
memecoin-automation-swarm/.claude/skills/: auto-demo-skill.yaml  banana.md  cloud-agent-skill.yaml
memecoin-automation-swarm/.claude/skills/adapt/: SKILL.md
memecoin-automation-swarm/.claude/skills/animate/: SKILL.md
memecoin-automation-swarm/.claude/skills/avant-garde-frontend-architect/: README.md  SKILL-SUMMARY.md  SKILL.md
memecoin-automation-swarm/.claude/skills/banana/: banana.js
memecoin-automation-swarm/.claude/skills/benchmark/: SKILL.md
memecoin-automation-swarm/.claude/skills/blender-3d-studio/: README.md  create-animation.py  infinity_3d_animated.blend
memecoin-automation-swarm/.claude/skills/canary/: SKILL.md
memecoin-automation-swarm/.claude/skills/clarify/: SKILL.md
memecoin-automation-swarm/.claude/skills/codex/: SKILL.md
memecoin-automation-swarm/.claude/skills/colorize/: SKILL.md
memecoin-automation-swarm/.claude/skills/connect-chrome/: SKILL.md
memecoin-automation-swarm/.claude/skills/cso/: SKILL.md
memecoin-automation-swarm/.opencode/: mcp.json  settings.local.json
memecoin-automation-swarm/.opencode/plugins/: blocklist.json  claude-code-bridge  install-counts-cache.json  installed_plugins.json  known_marketplaces.json
memecoin-automation-swarm/configs/: devnet.json  mainnet.json  testnet.json
memecoin-automation-swarm/docker/: docker-compose.yml
memecoin-automation-swarm/docker/clickhouse/: schema.sql
memecoin-automation-swarm/docker/redis/: redis.conf
memecoin-automation-swarm/docs/: ghostledger-collector-bridge-spec.md
memecoin-automation-swarm/frontend/: next.config.ts  package-lock.json  package.json
memecoin-automation-swarm/scripts/: deploy-clone.sh  export-dataset.sh  setup.sh
memecoin-automation-swarm/solana-scanners/: ALPHA_CAPTURE_PLAN.md  Cargo.toml
memecoin-automation-swarm/solana-scanners/src/: config.rs  lib.rs  main.rs
memecoin-automation-swarm/src/ts/: types.ts
(+388 files in other folders)
