[workspace]
members = [
    "src/rust/shared",
    "src/rust/recon",
    "src/rust/mint",
    "src/rust/detect",
    "src/rust/txeng",
    "src/rust/economy",
    "src/rust/risk",
]
exclude = ["solana-scanners"]
resolver = "2"

[workspace.dependencies]
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
