[package]
name = "recon"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
redis = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
url = "2.5.8"
reqwest = { version = "0.12", features = ["json"] }
