[package]
name = "risk"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
redis = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
